
- New: Compatibility for server version 4.0.0 (#644)
- New: Quantity unit conversions can be transitive now (unlimited QU levels)
- New: Product option "Factor purchase to stock unit" is disabled - Use normal product specific
  QU conversions instead, if needed
- New: Product option "Default quantity unit consume"
- New: Product option "Quantity unit for prices"
- Improved: Load label for energy values from server (was fixed kcal before)
- Improved: Show calories and prices on recipe ingredients list
- Fixed: Network error when saving a new product (#642)
- Fixed: Fulfillment info on recipe ingredients list was wrong with substituted products (#669)

All other changes, divided into app sections:

#### Stock

- New: Stock overview page now has checkbox options for all additional fields (#663)
- New: Product choose page after barcode scan now has really useful copy option for products (#636)
- New: Product pictures now can be removed and added with camera and clipboard (#536)
- New: On purchase page, store now can be pinned (always initially selected in session) (#525)
- New: Product groups, locations & quantity units now can be created while creating product
- Improved: Stock reminder is now for products which are not fresh anymore (expired, overdue
  or due soon)
- Improved: "Create product" page now uses "save and not close" buttons
- Improved: Misleading error when trying to save duplicated barcode on product barcode edit (#724)
- Improved: Message shown when product or recipe is not on server (#718)
- Improved: "Factor purchase to stock unit" was moved to quantity units category in master product
- Improved: When scanning a product barcode and the purchase or inventory page, the note will now
  also be prefilled from the barcode (was option before, but server v4 has that behavior now) (#644)
- Improved: Option for quick mode in behavior settings to return to overview after some time (#659)